Implement correct handling with long column names